plugins {
    id 'java'
    id 'application'
}

group = 'io.github.ititus'
version = '1.0.0'

wrapper {
    gradleVersion '8.12.1'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // implementation 'org.apache.bcel:bcel:6.5.0'
    implementation fileTree(dir: 'libs', include: '*.jar')
    implementation 'org.json:json:20250107'
    implementation 'io.github.ititus:ititus-commons:2.3.3'

    testImplementation platform('org.junit:junit-bom:5.12.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.assertj:assertj-core:3.27.3'
    testImplementation 'org.mockito:mockito-core:5.15.2'
}

test {
    useJUnitPlatform()
    testLogging {
        events 'passed', 'skipped', 'failed'
    }
}

application {
    mainClass = 'io.github.ititus.factorio.recipes.FactorioRecipes'
}
